# serializer version: 1
# name: test_climate_states[freezer-platforms0][climate.freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'Dummy_Appliance_1-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -18,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'Dummy_Appliance_2-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states[freezer-platforms0][climate.refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -13,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -27,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'Dummy_Appliance_1-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -18,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -13,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -27,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'Dummy_Appliance_2-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_api_push[freezer-platforms0][climate.refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freezer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -18,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freezer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -14,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -28,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refrigerator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refrigerator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 9,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -15,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -30,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -28,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Zone 3',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -15,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -30,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -15,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -30,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_mulizone[fridge_freezer-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Zone 3',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: -15,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: -30,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freezer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -18,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Freezer',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Freezer',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'freezer',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat2-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_freezer_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Freezer',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_freezer_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refrigerator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refrigerator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refrigerator',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'refrigerator',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_refrigerator_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Refrigerator',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_refrigerator_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: -28,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Zone 3',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: -25,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'miele',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': 'zone_3',
    'unique_id': 'DummyAppliance_Fridge_Freezer_Offline-thermostat3-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_states_offline[fridge_freezer_offline-fridge_freezer.json-platforms0][climate.fridge_freezer_zone_3_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fridge freezer Zone 3',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.fridge_freezer_zone_3_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
